force-app/main/default/objects/Flow_Health_Rule__mdt/Flow_Health_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Flow Health Rule</label>
    <pluralLabel>Flow Health Rules</pluralLabel>
    <description>Defines a health check rule for analyzing Salesforce Flows. Each record represents one rule with its detection class, severity, and remediation guidance.</description>
</CustomObject>