force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>Which category this rule belongs to</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>