force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>What this rule checks and why it matters</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>