force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Detection_Class__c.field-meta.xml
<CustomField>
    <fullName>Detection_Class__c</fullName>
    <label>Detection Class</label>
    <description>Apex class name that implements FlowRule interface (e.g. DmlInLoopRule)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>