force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Active</label>
    <description>Toggle to enable/disable this rule without code changes</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>