force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Max_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Max_Deduction__c</fullName>
    <label>Max Deduction</label>
    <description>Maximum total deduction for this rule regardless of occurrence count</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>