force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <label>Remediation</label>
    <description>Step-by-step guidance to fix violations of this rule</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>