force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule ID</label>
    <description>Unique identifier like PERF-001, ERR-001, SEC-001</description>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>