force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>How severe a violation of this rule is</description>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>