force-app/main/default/objects/Flow_Health_Rule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <description>Score deduction weight. Critical=10, High=7, Medium=4, Low=2</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>